examples/type_system/failing/170_match_disagreement_all_concrete_ordering_invariant_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let y: Int = match true {
        true -> "oops",
        false -> 1,
    }
}
